# mempalace-rs

./: .gitignore  AAA_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  SKILLS_GUIDE.md  bench_after.txt  bench_before.txt  bench_final.txt  mempalace-rs.skill  red_team_round3.py  scan-output.md  tasklist.md  trigger.json
.github/workflows/: ci.yml  codeql.yml
benches/: benchmarks.rs
benchmarks/: 2026_GOLD_STANDARDS.md  README.md
docs/: benchmarking_plan_2026.md
docs/aaak/: evolution_plan.md
docs/adrs/: aaak-evolution-hardening.md
examples/: README.md
hooks/: README.md  mempal_precompact_hook.sh  mempal_save_hook.sh
patches/rustls-webpki/: requirements.txt
patches/tungstenite/: Cargo.toml
patches/usearch/: Cargo.toml  package-lock.json
patches/usearch/simsimd/: package-lock.json  package.json
scripts/: update_benchmarks.rs
src/: benchmark.rs  config.rs  convo_miner.rs  dialect.rs  diary.rs  embedder_factory.rs  entity_detector.rs  entity_registry.rs  extractor.rs  knowledge_graph.rs  lib.rs  main.rs  mcp_server.rs  miner.rs  models.rs  normalize.rs  onboarding.rs  palace_graph.rs  searcher.rs  spellcheck.rs  split_mega_files.rs  storage.rs  vector_storage.rs
src/benchmarks/: babilong.rs  beam.rs  judge.rs  metrics.rs  mod.rs  ruler.rs  struct_mem.rs
tests/: config_coverage_test.rs  dialect_coverage_test.rs  dialect_hardness_test.rs  dialect_test.rs  integration_tests.rs  kg_test.rs  mcp_test.rs  searcher_test.rs
tests/fixtures/: longmemeval_ci.json
