[package]
name = "mempalace-rs"
version = "0.4.2"
edition = "2021"
description = "High-performance, local AI memory with AAAK v3.2 protocol and temporal Knowledge Graph"
license = "MIT"
repository = "https://github.com/jxoesneon/mempalace-rs"
homepage = "https://github.com/jxoesneon/mempalace-rs"
keywords = ["memory", "ai", "mcp", "knowledge-graph", "aaak"]
categories = ["command-line-utilities", "database", "artificial-intelligence"]
readme = "README.md"
documentation = "https://docs.rs/mempalace-rs"
default-run = "mempalace-rs"
exclude = [
    "models/*",
    ".fastembed_cache/*",
    "assets/*",
    "benchmarks/*",
    "*.db",
    "*.db-journal",
    "target/*"
]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
async-trait = "0.1"
rand = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
# chromadb = "2.3.0"  # Replaced by pure-Rust usearch + fastembed
tokio = { version = "1.51.0", features = ["full"] }
mcp_rs = { version = "0.1.0" }
futures = "0.3.32"
walkdir = "2.5.0"
regex = "1.12.3"
chrono = "0.4.44"
symspell = "0.3.0"
reqwest = { version = "0.12", features = ["json"] }
rayon = "1.10"
dialoguer = "0.11"
tempfile = "3.27.0"
lazy_static = "1.5.0"
sha2 = "0.10"
hex = "0.4.3"

# Pure-Rust storage engine dependencies (replaces ChromaDB)
fastembed = "4"
usearch = "2"
ignore = "0.4.25"

[[bin]]
name = "update-benchmarks"
path = "scripts/update_benchmarks.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "download-model"
path = "src/bin/download_model.rs"

# Patch usearch with Windows MAP_FAILED fix
# See: https://github.com/unum-cloud/usearch/issues/746
[patch.crates-io]
usearch = { path = "patches/usearch" }
# Patch core2 to fix yanked version (RUSTSEC-2026-0099)
# All crates.io versions were yanked, using GitHub source
# Version bumped to 0.4.1 to avoid yank conflict
core2 = { path = "patches/core2" }
# Patch tungstenite to fix rand vulnerability (RUSTSEC-2026-0097)
# Upgraded rand from 0.8.5 to 0.9.0
tungstenite = { path = "patches/tungstenite" }
# Patch rustls-webpki to fix certificate validation vulnerabilities
# RUSTSEC-2026-0098 and RUSTSEC-2026-0099
# Upgraded from 0.103.11 to 0.103.12
rustls-webpki = { path = "patches/rustls-webpki" }
